--- a/.github/workflows/run_cortex_m.yml
+++ b/.github/workflows/run_cortex_m.yml
@@ -18,6 +18,7 @@ jobs:
       (github.event_name == 'schedule' && github.repository == 'tensorflow/tflite-micro')
     with:
       trigger-sha: ${{ github.sha }}
+      scope: 'all'
     secrets:
       tflm-bot-token: ${{ secrets.TFLM_BOT_PACKAGE_READ_TOKEN }}
 
