--- a/.github/workflows/run_cortex_m.yml
+++ b/.github/workflows/run_cortex_m.yml
@@ -1,6 +1,6 @@
 name: Run-Cortex-M
 
-# This is the entry point for cortex_m.yml for scheduled and workflow_dispatch events. 
+# Entry point for Cortex-M tests. Triggered by schedule or workflow_dispatch.
 
 on:
   schedule:
