--- a/.github/workflows/run_hexagon.yml
+++ b/.github/workflows/run_hexagon.yml
@@ -1,6 +1,6 @@
 name: Run-Hexagon
 
-# This is the entry point for hexagon.yml for scheduled and workflow_dispatch events. 
+# Entry point for Hexagon tests. Triggered by schedule or workflow_dispatch.
 
 on:
   schedule:
