--- a/.github/workflows/run_riscv.yml
+++ b/.github/workflows/run_riscv.yml
@@ -1,6 +1,7 @@
 name: Run-RISCV
 
-# https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#onschedule
+# Entry point for RISC-V tests. Triggered by schedule or workflow_dispatch.
+
 on:
   schedule:
     # 10am UTC is 3am or 4am PT depending on daylight savings.
