--- a/.github/workflows/suite_cortex_m.yml
+++ b/.github/workflows/suite_cortex_m.yml
@@ -6,14 +6,72 @@ on:
       trigger-sha:
         required: true
         type: string
+      scope:
+        description: 'Scope of tests to run (basic or all)'
+        required: false
+        type: string
+        default: 'all'
     secrets:
       tflm-bot-token:
         required: true
 
 jobs:
+  # --- Basic Tests (Bluepill, QEMU) ---
+
+  cortex_m_bluepill:
+    if: inputs.scope == 'basic' || inputs.scope == 'all'
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - name: Cortex-M Bluepill Release
+            script: test_bluepill_release.sh
+          - name: Cortex-M Bluepill No Release
+            script: test_bluepill_no_release.sh
+          - name: Cortex-M Bluepill Renode
+            script: test_bluepill_renode.sh
+
+    name: ${{ matrix.name }}
+    steps:
+      - uses: actions/setup-python@v6
+        with:
+          python-version: '3.10'
+      - uses: actions/checkout@v6
+        with:
+          ref: ${{ inputs.trigger-sha }}
+      - name: Install dependencies
+        run: |
+          pip3 install Pillow
+          pip3 install numpy
+      - name: Test
+        run: |
+          cd ../
+          tflite-micro/tensorflow/lite/micro/tools/ci_build/${{ matrix.script }} tflite-micro/
+
+  cortex_m_qemu:
+    if: inputs.scope == 'basic' || inputs.scope == 'all'
+    runs-on: ubuntu-latest
+
+    name: Cortex-M QEMU Unit Tests
+    steps:
+      - uses: actions/setup-python@v6
+        with:
+          python-version: '3.10'
+      - uses: actions/checkout@v6
+        with:
+          ref: ${{ inputs.trigger-sha }}
+      - name: Test
+        uses: docker://ghcr.io/tflm-bot/tflm-ci:0.6.5
+        with:
+          args: /bin/sh -c tensorflow/lite/micro/tools/ci_build/test_cortex_m_qemu.sh tflite-micro/
+
+  # --- Extended Tests (Generic, Corstone) ---
+
   # --- GCC Tests ---
 
   generic_gcc:
+    if: inputs.scope == 'all'
     runs-on: ubuntu-latest
     name: Cortex-M Generic (GCC)
     steps:
@@ -32,6 +90,7 @@ jobs:
           tensorflow/lite/micro/tools/ci_build/test_cortex_m_generic.sh
 
   corstone_300_gcc:
+    if: inputs.scope == 'all'
     runs-on: ubuntu-latest
     name: Cortex-M Corstone 300 (GCC)
     steps:
@@ -52,6 +111,7 @@ jobs:
   # --- Arm Clang Tests ---
 
   generic_armclang:
+    if: inputs.scope == 'all'
     runs-on: ubuntu-latest
     name: Cortex-M Generic (Arm Clang)
     steps:
@@ -76,6 +136,7 @@ jobs:
           tensorflow/lite/micro/tools/ci_build/test_cortex_m_generic.sh armclang
 
   corstone_300_armclang:
+    if: inputs.scope == 'all'
     runs-on: ubuntu-latest
     name: Cortex-M Corstone 300 (Arm Clang)
     steps:
