Fix incorrect dependency name in run_core.yml

--- a/.github/workflows/run_core.yml
+++ b/.github/workflows/run_core.yml
@@ -22,7 +22,7 @@ jobs:
       tflm-bot-token: ${{ secrets.TFLM_BOT_PACKAGE_READ_TOKEN }}
 
   issue-on-error:
-    needs: [call-suite-basics]
+    needs: [call-suite-core]
     if: ${{ always() && contains(needs.*.result, 'failure') }}
     uses: ./.github/workflows/issue_on_error.yml
     with:
