Add concurrency groups to PR workflows

--- a/.github/workflows/pr_full.yml
+++ b/.github/workflows/pr_full.yml
@@ -9,6 +9,10 @@ on:
     types:
       - labeled
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   gatekeeper:
     runs-on: ubuntu-latest
