--- a/.github/workflows/pr_ready.yml
+++ b/.github/workflows/pr_ready.yml
@@ -10,6 +10,10 @@ on:
       - synchronize
       - labeled
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   gatekeeper:
     runs-on: ubuntu-latest
