--- a/.github/workflows/pr_ready.yml
+++ b/.github/workflows/pr_ready.yml
@@ -11,7 +11,7 @@ on:
       - labeled
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}-${{ github.event_name }}
   cancel-in-progress: true
 
 jobs:
