--- a/.github/workflows/pr_full.yml
+++ b/.github/workflows/pr_full.yml
@@ -10,7 +10,7 @@ on:
       - labeled
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}-${{ github.event.label.name || 'void' }}
   cancel-in-progress: true
 
 jobs:
