--- a/.github/workflows/suite_core.yml
+++ b/.github/workflows/suite_core.yml
@@ -25,3 +25,8 @@ jobs:
     uses: ./.github/workflows/test_misc.yml
     with:
       trigger-sha: ${{ inputs.trigger-sha }}
+
+  call-ci-windows:
+    uses: ./.github/workflows/test_windows.yml
+    with:
+      trigger-sha: ${{ inputs.trigger-sha }}
